# Note, this cmake file is currently for windows only

set(IUP_SOURCES
    src/iup.c
    src/iup_animatedlabel.c
    src/iup_array.c
    src/iup_assert.c
    src/iup_attrib.c
    src/iup_backgroundbox.c
    src/iup_box.c
    src/iup_button.c
    src/iup_callback.c
    src/iup_canvas.c
    src/iup_cbox.c
    src/iup_childtree.c
    src/iup_class.c
    src/iup_classattrib.c
    src/iup_classbase.c
    src/iup_classinfo.c
    src/iup_colorbar.c
    src/iup_colorbrowser.c
    src/iup_colordlg.c
    src/iup_colorhsi.c
    src/iup_config.c
    src/iup_detachbox.c
    src/iup_dial.c
    src/iup_dialog.c
    src/iup_dlglist.c
    src/iup_draw.c
    src/iup_dropbutton.c
    src/iup_elempropdlg.c
    src/iup_expander.c
    src/iup_export.c
    src/iup_filedlg.c
    src/iup_fill.c
    src/iup_flatbutton.c
    src/iup_flatframe.c
    src/iup_flatlabel.c
    src/iup_flatlist.c
    src/iup_flatscrollbar.c
    src/iup_flatscrollbox.c
    src/iup_flatseparator.c
    src/iup_flattabs.c
    src/iup_flattoggle.c
    src/iup_flattree.c
    src/iup_flatval.c
    src/iup_focus.c
    src/iup_font.c
    src/iup_fontdlg.c
    src/iup_frame.c
    src/iup_func.c
    src/iup_gauge.c
    src/iup_getparam.c
    src/iup_globalattrib.c
    src/iup_globalsdlg.c
    src/iup_gridbox.c
    src/iup_hbox.c
    src/iup_image.c
    src/iup_key.c
    src/iup_label.c
    src/iup_layout.c
    src/iup_layoutdlg.c
    src/iup_ledlex.c
    src/iup_ledparse.c
    src/iup_linefile.c
    src/iup_link.c
    src/iup_list.c
    src/iup_loop.c
    src/iup_mask.c
    src/iup_maskmatch.c
    src/iup_maskparse.c
    src/iup_menu.c
    src/iup_messagedlg.c
    src/iup_multibox.c
    src/iup_names.c
    src/iup_normalizer.c
    src/iup_object.c
    src/iup_open.c
    src/iup_predialogs.c
    src/iup_progressbar.c
    src/iup_progressdlg.c
    src/iup_radio.c
    src/iup_recplay.c
    src/iup_register.c
    src/iup_sbox.c
    src/iup_scanf.c
    src/iup_scrollbox.c
    src/iup_show.c
    src/iup_space.c
    src/iup_spin.c
    src/iup_split.c
    src/iup_str.c
    src/iup_strmessage.c
    src/iup_table.c
    src/iup_tabs.c
    src/iup_text.c
    src/iup_thread.c
    src/iup_timer.c
    src/iup_toggle.c
    src/iup_tree.c
    src/iup_user.c
    src/iup_val.c
    src/iup_vbox.c
    src/iup_zbox.c
    src/win/iupwindows_help.c
    src/win/iupwindows_info.c
    src/win/iupwindows_main.c
    src/win/iupwin_brush.c
    src/win/iupwin_button.c
    src/win/iupwin_calendar.c
    src/win/iupwin_canvas.c
    src/win/iupwin_clipboard.c
    src/win/iupwin_common.c
    src/win/iupwin_datepick.c
    src/win/iupwin_dialog.c
    src/win/iupwin_dragdrop.c
    src/win/iupwin_draw.c
    src/win/iupwin_draw_gdi.c
    src/win/iupwin_draw_wdl.c
    src/win/iupwin_filedlg.c
    src/win/iupwin_focus.c
    src/win/iupwin_font.c
    src/win/iupwin_fontdlg.c
    src/win/iupwin_frame.c
    src/win/iupwin_globalattrib.c
    src/win/iupwin_handle.c
    src/win/iupwin_image.c
    src/win/iupwin_image_wdl.c
    src/win/iupwin_info.c
    src/win/iupwin_key.c
    src/win/iupwin_label.c
    src/win/iupwin_list.c
    src/win/iupwin_loop.c
    src/win/iupwin_menu.c
    src/win/iupwin_messagedlg.c
    src/win/iupwin_open.c
    src/win/iupwin_progressbar.c
    src/win/iupwin_str.c
    src/win/iupwin_tabs.c
    src/win/iupwin_text.c
    src/win/iupwin_timer.c
    src/win/iupwin_tips.c
    src/win/iupwin_toggle.c
    src/win/iupwin_touch.c
    src/win/iupwin_tree.c
    src/win/iupwin_val.c
    src/win/wdl/backend-d2d.c
    src/win/wdl/backend-dwrite.c
    src/win/wdl/backend-gdix.c
    src/win/wdl/backend-wic.c
    src/win/wdl/bitblt.c
    src/win/wdl/brush.c
    src/win/wdl/cachedimage.c
    src/win/wdl/canvas.c
    src/win/wdl/draw.c
    src/win/wdl/fill.c
    src/win/wdl/font.c
    src/win/wdl/image.c
    src/win/wdl/init.c
    src/win/wdl/memstream.c
    src/win/wdl/misc.c
    src/win/wdl/path.c
    src/win/wdl/string.c
    src/win/wdl/strokestyle.c
)
set(IUP_INCLUDES
    include/iup.h
    include/iupcbs.h
    include/iupcontrols.h
    include/iupdef.h
    include/iupdraw.h
    include/iupdraw_cd.h
    include/iupfiledlg.h
    include/iupgl.h
    include/iupglcontrols.h
    include/iupim.h
    include/iupkey.h
    include/iuplua.h
    include/iupluacontrols.h
    include/iupluafiledlg.h
    include/iupluagl.h
    include/iupluaglcontrols.h
    include/iupluaim.h
    include/iupluaole.h
    include/iupluascripterdlg.h
    include/iupluatuio.h
    include/iupluaweb.h
    include/iuplua_mglplot.h
    include/iuplua_plot.h
    include/iuplua_scintilla.h
    include/iupole.h
    include/iuptuio.h
    include/iupweb.h
    include/iup_class_cbs.hpp
    include/iup_config.h
    include/iup_export.h
    include/iup_mglplot.h
    include/iup_plot.h
    include/iup_plus.h
    include/iup_scintilla.h
    include/iup_varg.h
)

add_library(iup STATIC
    ${IUP_SOURCES}
    ${IUP_INCLUDES}
)
target_link_libraries(iup cx png)
target_compile_definitions(iup PRIVATE XALLOC_REMAP_MALLOC COBJMACROS USE_NEW_DRAW  _UNICODE UNICODE)
target_include_directories(iup
    PRIVATE
        src
        src/win/wdl
    PUBLIC
        ${CMAKE_CURRENT_SOURCE_DIR}/include)

add_library (iupcd STATIC
    srccd/iup_cd.c
    srccd/iup_cdutil.c
    srccd/iup_draw_cd.c
)
target_link_libraries(iupcd iup cd)
target_compile_definitions(iupcd PRIVATE XALLOC_REMAP_MALLOC COBJMACROS USE_NEW_DRAW  _UNICODE UNICODE)
target_include_directories(iupcd
    PRIVATE
        src)

add_library (iupcontrols
    srccontrols/matrix/iupmat_aux.c
    srccontrols/matrix/iupmat_colres.c
    srccontrols/matrix/iupmat_draw.c
    srccontrols/matrix/iupmat_edit.c
    srccontrols/matrix/iupmat_ex.c
    srccontrols/matrix/iupmat_getset.c
    srccontrols/matrix/iupmat_key.c
    srccontrols/matrix/iupmat_mark.c
    srccontrols/matrix/iupmat_mem.c
    srccontrols/matrix/iupmat_mouse.c
    srccontrols/matrix/iupmat_numlc.c
    srccontrols/matrix/iupmat_scroll.c
    srccontrols/matrix/iupmatrix.c
    srccontrols/matrixex/iup_matrixex.c
    srccontrols/matrixex/iupmatex_busy.c
    srccontrols/matrixex/iupmatex_clipboard.c
    srccontrols/matrixex/iupmatex_copy.c
    srccontrols/matrixex/iupmatex_export.c
    srccontrols/matrixex/iupmatex_find.c
    srccontrols/matrixex/iupmatex_sort.c
    srccontrols/matrixex/iupmatex_undo.c
    srccontrols/matrixex/iupmatex_units.c
    srccontrols/matrixex/iupmatex_visible.c
    srccontrols/iup_cells.c
    srccontrols/iup_controls.c
    srccontrols/iup_matrixlist.c
    )
target_link_libraries(iupcontrols iupcd)
target_compile_definitions(iupcontrols PRIVATE XALLOC_REMAP_MALLOC COBJMACROS USE_NEW_DRAW  _UNICODE UNICODE)
target_include_directories(iupcontrols
    PRIVATE
        src
        srccd
        srccontrols)

add_library (iupplot
    srcplot/iup_plot_attrib.cpp
    srcplot/iup_plot_ctrl.cpp
    srcplot/iupPlot.cpp
    srcplot/iupPlotAxis.cpp
    srcplot/iupPlotCalc.cpp
    srcplot/iupPlotData.cpp
    srcplot/iupPlotDraw.cpp
    srcplot/iupPlotTick.cpp
)
target_link_libraries(iupplot iupcd)
target_compile_definitions(iupplot PRIVATE XALLOC_REMAP_MALLOC COBJMACROS USE_NEW_DRAW  _UNICODE UNICODE)
target_include_directories(iupplot
    PRIVATE
        src
        srccd)